# Ultevis

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  WORKLOG.md  build.bat  build.sh  main.cpp  makefile  resources.qrc  vcpkg.json
.github/workflows/: build.yml
qml/: DrumsPage.qml  GuitarPage.qml  InstrumentSelectPage.qml  KeyboardPage.qml  LandingPage.qml  PlaceholderPage.qml  ThereminPage.qml  main.qml
qml/components/: DrumSettingsPane.qml  FloatingNote.qml  GuitarDropdownImages.qml  InstrumentCard.qml  KeyboardDropdownImages.qml  OctaveGestureHoldController.qml  SettingsPane.qml  SettingsPanel.qml  SettingsSlider.qml  SettingsToggle.qml  SineWaveCanvas.qml  TypeSelector.qml  WaveIcon.qml  WaveShapeDropdown.qml
resources/: Info.plist.in
src/: main.cpp  opencv_smoke.cpp
src/App/: AppController.cpp  AppController.h
src/Audio/: AudioEngine.cpp  AudioEngine.h  AudioEngineDevice.cpp  AudioEngineDrums.cpp  AudioEngineGuitar.cpp  AudioEngineKeyboard.cpp  AudioEngineMidi.cpp  AudioEngineTheremin.cpp  GuitarChords.h  OscillatorVoice.cpp  OscillatorVoice.h
src/Camera/: CameraFeed.cpp  CameraFeed.h
src/Core/: GlobalState.h
src/Input/: TerminalUI.cpp  TerminalUI.h
src/airchestra/: AppEngine.cpp  AppEngine.h  EventLogger.cpp  EventLogger.h  ImGuiLayer.cpp  ImGuiLayer.h  LandingPageView.cpp  LandingPageView.h  Main.cpp  MainComponent.cpp  MainComponent.h  OverlayView.cpp  OverlayView.h  RuntimePaths.h  UiActions.cpp  UiActions.h  UiRenderer.cpp  UiRenderer.h  VideoReceiver.h  ViewState.h
src/mediapipe/: drums.py  guitar.py  hand_detector.py  keyboard.py  keyboard_gestures.py  keyboard_utils.py  theremin.py
src/theremin/: GestureMappings.h  HandControlState.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiGestureOutput.cpp  MidiGestureOutput.h  MockHandInput.cpp  MockHandInput.h  ThereminAudioComponent.cpp  ThereminAudioComponent.h
tests/: test_keyboard_gestures.py  test_keyboard_layout.py
tests/qml/: tst_OctaveGestureHoldController.qml
